# QuaternionEngine

./: .gitignore  CMakeLists.txt  Makefile  README.txt  build.bat
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: styles.xml
assets/fonts/: README  ToshibaSat_9x14.fbm
assets/shaders/: BasicCompute.hlsl
ios/: Info.plist  LaunchScreen.storyboard
src/: main.c
src/app/: app.c  app.h
src/assets/: assets.c  assets.h  font.c  font.h
src/core/: engine.c  engine.h  hotload.c  hotload.h  input.c  input.h  types.h
src/debug/: debug_overlay.c  debug_overlay.h
src/math/: vec.h
src/render/: renderer.c  renderer.h  ui_renderer.c  ui_renderer.h
src/render/shaders/: .TextOverlayCompute.hlsl.swp  BasicCompute.hlsl  TextOverlayCompute.hlsl  UIPanelCompute.hlsl
src/ui/: text_layout.c  text_layout.h  ui.c  ui.h  ui_internal.h  ui_panel.c  ui_text.c
